Fix loading page not showing

--- a/src/css/loading.css
+++ b/src/css/loading.css
@@ -1,5 +1,3 @@
 #loading {
-  position: absolute;
-  top: 40%; left: 50%;
   text-align: center;
 }
